Creacion base de los componentes y el enrutmiento de las paginas y primer modelo del navbar

--- a/src/app/main/components/main/gallery/gallery.component.html
+++ b/src/app/main/components/main/gallery/gallery.component.html
@@ -1,3 +1,4 @@
+<p>gallery works!</p>
 
 <div><h2> ESTAMOS TRABAJANDO PARA QUE MUY PRONTO PUEDAS NAVEGAR CORRECTAMENTE EN NUESTRA PAGINA</h2></div>
 
