--- a/src/app/main/components/draw/draw.component.html
+++ b/src/app/main/components/draw/draw.component.html
@@ -1,1 +1,4 @@
-<p>draw works!</p>
+
+
+<div><h2> ESTAMOS TRABAJANDO PARA QUE MUY PRONTO PUEDAS NAVEGAR CORRECTAMENTE EN NUESTRA PAGINA</h2></div>
+
