--- a/src/app/main/components/register/register.component.html
+++ b/src/app/main/components/register/register.component.html
@@ -1,3 +1,5 @@
+<p>register works!</p>
+
 
 <div><h2> ESTAMOS TRABAJANDO PARA QUE MUY PRONTO PUEDAS NAVEGAR CORRECTAMENTE EN NUESTRA PAGINA</h2></div>
 
