--- a/frontend/src/app/main/components/register/register.component.html
+++ b/frontend/src/app/main/components/register/register.component.html
@@ -1,5 +1,60 @@
-<p>register works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>PixelArt - Login</title>
+</head>
+<body>
+<div class="container-form register">
+  <div class="information">
+    <div class="info-childs">
+      <h2>Bienvenido</h2>
+      <p>Inicia Sesión si ya tienes una cuenta</p>
+      <input type="button" value="Iniciar Sesión" id="sign-in" (click)="directLogin()">
+    </div>
+  </div>
+  <div class="form-information">
+    <div class="form-information-childs">
+      <h2>Crear una Cuenta</h2>
+      <div class="icons">
+        <i class='bx bxl-google'></i>
+        <i class='bx bxl-github'></i>
+        <i class='bx bxl-linkedin'></i>
+      </div>
+      <p>Por favor ingresa los siguientes datos</p>
+      <form class="form form-register" novalidate>
+        <div>
+          <label>
+            <i class='bx bx-user'></i>
+            <input type="text" placeholder="Nombre Usuario" name="userName">
+          </label>
+        </div>
+        <div>
+          <label>
+            <i class='bx bx-envelope'></i>
+            <input type="email" placeholder="Correo Electronico" name="userEmail">
+          </label>
+        </div>
+        <div>
+          <label>
+            <i class='bx bx-lock-alt'></i>
+            <input type="password" placeholder="Contraseña" name="userPassword">
+          </label>
+        </div>
 
-
-<div><h2> ESTAMOS TRABAJANDO PARA QUE MUY PRONTO PUEDAS NAVEGAR CORRECTAMENTE EN NUESTRA PAGINA</h2></div>
-
+        <input type="submit" value="Registrarse">
+        <div class="alerta-error">Todos los campos son obligatorios</div>
+        <div class="alerta-exito">Te registraste correctamente</div>
+      </form>
+    </div>
+  </div>
+</div>
+</body>
+</html>
