--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -39,16 +39,31 @@
       </button>
     </li>
 
-    <li>
-      <button class="button-login"><a class="display-a" [routerLink]="['/login']">
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);">
-        <path d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z">
-        </path>
-      </svg>
-      <span>Iniciar sesion</span>
-    </a>
-    </button>
-    </li>
+    <ng-container *ngIf="!isToken">
+      <li>
+        <button class="button-login"><a class="display-a" [routerLink]="['/login']">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);">
+          <path d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z">
+          </path>
+        </svg>
+        <span>Iniciar sesion</span>
+      </a>
+      </button>
+      </li>
+    </ng-container>
+
+    <ng-container *ngIf="isToken">
+      <li>
+        <button class="button-login"><a class="display-a" (click)="cerrarSesion()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);">
+          <path d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z">
+          </path>
+        </svg>
+        <span>Cerrar sesion</span>
+      </a>
+      </button>
+      </li>
+    </ng-container>
   </ul>
 
 </nav>
