--- a/frontend/src/app/main/components/main/gallery/gallery.component.html
+++ b/frontend/src/app/main/components/main/gallery/gallery.component.html
@@ -1,4 +1,30 @@
-<p>gallery works!</p>
+<div class="tarjeta">
+  <div class="contenido">
+    <div class="ladoIzq">
+      <h2 class="titulo">Titulo</h2>
+      <div class="cuerpo">
+        <p>Descripción</p>
+        <a class="btn" href="#">Eliminar</a>
+      </div>
+    </div>
+    <div class="ladoDer">
+      <img src="#" />
+    </div>
+  </div>
+</div>
 
-<div><h2> ESTAMOS TRABAJANDO PARA QUE MUY PRONTO PUEDAS NAVEGAR CORRECTAMENTE EN NUESTRA PAGINA</h2></div>
+<div class="tarjeta">
+  <div class="contenido">
+    <div class="ladoIzq">
+      <h2 class="titulo">Titulo</h2>
+      <div class="cuerpo">
+        <p>Descripción</p>
+        <a class="btn" href="#">Eliminar</a>
+      </div>
+    </div>
+    <div class="ladoDer">
+      <img src="#" />
+    </div>
+  </div>
+</div>
 
