--- a/frontend/src/app/main/components/draw/draw.component.css
+++ b/frontend/src/app/main/components/draw/draw.component.css
@@ -1,3 +1,4 @@
+
 *{
   overflow-y: hidden !important;
 }
@@ -15,7 +16,7 @@ canvas {
   background-image: url("../../../../assets/img/fondoEjemplo.jpg");
   background-repeat: repeat;
   background-size: 420px;
-  cursor: crosshair;   
+  cursor: crosshair;
 
 }
 
@@ -27,6 +28,10 @@ nav{
   background-color: #555555;
 }
 
+nav a{
+  margin:  0px 2cm 0px 0px;
+}
+
 main{
   display: flex;
   justify-content: center;
@@ -36,7 +41,7 @@ main{
 main aside{
   overflow: hidden ;
   text-align: center;
-  height: 1360px;
+  height: inherit;
   color: #FFFFFF;
   padding: 10px;
   background-color: #1e1e1e;
@@ -97,7 +102,7 @@ form input[type="number"]{
 }
 
 .savePng-button{
-  color: white;   
+  color: white;
   margin: 5px 30px;
   padding: 8px;
   border: none;
@@ -105,12 +110,136 @@ form input[type="number"]{
   background: linear-gradient(45deg, #00bf00, #58ef58);
 }
 
+.postPng-button{
+  color: white;
+  margin: 5px 30px;
+  padding: 8px;
+  border: none;
+  border-radius: 8px;
+  background: linear-gradient(45deg, #2a77cf, #001a9c);
+}
+
+section{
+  display: flex;
+}
+
+.formPost{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.formPost input{
+  border: 1px solid grey;
+  border-radius: 4px;
+  margin: 10px;
+  padding: 3px;
+  height: 30px;
+}
+
+.formPost textarea{
+  border: 1px solid grey;
+  border-radius: 4px;
+  margin: 10px;
+  padding: 4px;
+  height: 80px;
+}
+
+#btn-modal{
+  display: none;
+}
+
+.container-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+#btn-modal-1:checked ~ .modal-1{
+  display: flex;
+}
+
+.content-modal {
+  width: 60%;
+  min-width: 350px;
+  max-width: 700px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn-cerrar label {
+  cursor: pointer;
+}
+
+.content-modal h2{
+  margin-bottom: 15px;
+}
+
+.postArt{
+  border-radius: 4px;
+  background-color: #419700;
+  padding: 13px;
+  margin: 10px;
+  border: none;
+  font-size: 20px;
+  color: white;
+}
+
+.content-modal .btn-cerrar{
+  width: 100%;
+  margin-top: 15px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.content-modal .btn-cerrar label{
+  padding: 7px 10px;
+  background-color: #0322cf;
+  color: #ffffff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.content-modal .btn-cerrar label:hover{
+  background-color: #455ad3;
+}
+
+.cerrar-modal{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 main article{
   display: block;
-  margin: auto;
+  margin: 10px auto;
 }
 
 aside button {
   margin: 5px;
+}
+
+footer{
+  background-color: #1e1e1e;
+  text-align: center;
+  color: #FFFFFF;
 }
 
