--- a/frontend/src/app/main/components/main/gallery/gallery.component.html
+++ b/frontend/src/app/main/components/main/gallery/gallery.component.html
@@ -1,30 +1,15 @@
-<div class="tarjeta">
+<div class="tarjeta" *ngFor="let pixelArt of this.pixelArtService.listOfPixelArt">
   <div class="contenido">
     <div class="ladoIzq">
-      <h2 class="titulo">Titulo</h2>
+      <h2 class="titulo">{{pixelArt.title}}</h2>
       <div class="cuerpo">
-        <p>Descripción</p>
-        <a class="btn" href="#">Eliminar</a>
+        <p>{{pixelArt.description}}</p>
+
+        <h3> Creado por : {{pixelArt.userName}}</h3>
       </div>
     </div>
     <div class="ladoDer">
-      <img src="#" />
+      <img src="data:image/png;base64,{{pixelArt.image}}" />
     </div>
   </div>
 </div>
-
-<div class="tarjeta">
-  <div class="contenido">
-    <div class="ladoIzq">
-      <h2 class="titulo">Titulo</h2>
-      <div class="cuerpo">
-        <p>Descripción</p>
-        <a class="btn" href="#">Eliminar</a>
-      </div>
-    </div>
-    <div class="ladoDer">
-      <img src="#" />
-    </div>
-  </div>
-</div>
-
