Implementacion de recursion en metodo de cubeta

--- a/frontend/src/app/main/components/draw/draw.component.html
+++ b/frontend/src/app/main/components/draw/draw.component.html
@@ -33,8 +33,10 @@
 
   <aside class="right">
     <label for="colorPicker">Elige un color:</label> <br>
-    <input type="color" id="colorPicker" [(ngModel)]="selectedColor" /> <br>
+    <input type="color" id="colorPicker" [(ngModel)]="selectedColor" />
   </aside>
+
+
 </main>
 
 <footer><h3>Todos los derechos reservados @Pixel-art-IUSH</h3></footer>
