Actualizacion de angular 16 a 17

--- a/frontend/src/app/main/components/draw/draw.component.html
+++ b/frontend/src/app/main/components/draw/draw.component.html
@@ -39,7 +39,7 @@
 
 </main>
 
-<footer><h3>Todos los derechos reservados @Pixel-art-IUSH</h3></footer>
+<footer><h3>Todos los derechos reservados &#64;Pixel-art-IUSH</h3></footer>
 
 <!-- Modal -->
 
