Prueba de cambios

--- a/frontend/src/app/main/components/main/home/home.component.html
+++ b/frontend/src/app/main/components/main/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="home">
-  <h2>
-    CREA Y DESCUBRE EL PODER DE TU IMAGINACION
-  </h2>
+  
+  <h2>CREA Y DESCUBRE EL PODER DE TU IMAGINACION</h2>
 
-  <h4>SOCIALIZA, COMPARTE Y CREA </h4>
+  <h4>SOCIALIZA, COMPARTE Y CREA</h4>
 
   <ul>
     <li>
