--- a/frontend/src/app/shared/toggle-theme/toggle-theme.component.html
+++ b/frontend/src/app/shared/toggle-theme/toggle-theme.component.html
@@ -1,5 +1,5 @@
 <div>
     <p-button (onClick)="toggleDarkMode()" severity="secondary" [rounded]="true" [text]="true" [raised]="true" >   
-        <i class="pi pi-palette" style="font-size: 2rem;"></i>
+        <i [ngClass]="isDarkMode ? 'pi pi-sun' : 'pi pi-moon'" style="font-size: 2rem;"></i>
     </p-button>
  </div>
