--- a/frontend/src/app/main/components/draw/draw.component.html
+++ b/frontend/src/app/main/components/draw/draw.component.html
@@ -1,9 +1,8 @@
 
-
 <nav>
   <a [routerLink]="['/main']">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(63, 96, 247, 1);transform: ;msFilter:;"><path d="m21.743 12.331-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z"></path></svg>
-    </a>
+  </a>
   <label for="brushSize">Tamaño del pincel: </label>
   <input type="range" id="brushSize" min="10" max="50" step="10" [(ngModel)]="brushSize" (input)="changeBrushSize(brushSize)">
   <span>{{brushSize}} px</span>
@@ -23,6 +22,7 @@
     <button (click)="activateEraser()" title="Borrador"><img src="../../../../assets/img/pixel-art-eraser-school-supplies-260nw-1592272519-removebg-preview.png" alt=""></button> <br>
     <button (click)="deactivateEraser('#000000')" title="Lapiz"><img src="../../../../assets/img/pencil-pixel-art-icon-isolated-260nw-2097008554-removebg-preview.png" alt=""></button> <br>
     <button (click)="activateBucket()" title="Cubeta (beta)"><img src="../../../../assets/img/pixel-art-water-bucket-editable-260nw-1901045389-removebg-preview.png" alt=""></button>
+    <app-edit-image></app-edit-image>
   </aside>
 
   <article>
@@ -39,7 +39,6 @@
       <app-ai-image-generator></app-ai-image-generator>
     </div>
   </aside>
-
 </main>
 
 <footer><h3>Todos los derechos reservados &#64;Pixel-art-IUSH</h3></footer>
