Mejoras en la UI Modificado la resolución del canvas de 600 a 400px Mejoras en la Interfaz Componente draw, edit y ai Cambios en el backend (Nueva api) Mejora en metodos ASync java Cambio de endpoint Se añadieron DTO especificos para la nueva api

--- a/frontend/src/app/main/components/ai/ai-image-generator.component.html
+++ b/frontend/src/app/main/components/ai/ai-image-generator.component.html
@@ -24,7 +24,7 @@
     <div *ngIf="generatedImageUrl" class="image-container">
       <h4>Imagen Generada:</h4>
       <a [href]="generatedImageUrl" target="_blank">
-        <img [src]="generatedImageUrl" alt="Imagen generada" class="generated-image" />
+        <img [src]="generatedImageUrl" alt="Imagen generada" class="generated-image" (click)="abrirImagen()" />
       </a>
     </div>
   </div>
