--- a/frontend/src/app/main/components/draw/draw.component.css
+++ b/frontend/src/app/main/components/draw/draw.component.css
@@ -1,5 +1,8 @@
 body{
-  overflow-x: hidden !important;
+  margin: 0;
+  padding: 0;
+  height: auto;
+  overflow-x: hidden;
 }
 
 div{
@@ -8,17 +11,29 @@ div{
 }
 
 .draw-square{
-  width: 100%
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: height 0.3s ease-in-out;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 canvas {
   background-image: url("../../../../assets/img/fondoEjemplo.jpg");
   background-repeat: repeat;
-  background-size: 420px;
+  background-size: 400px;
   cursor: crosshair;
-  
-
+  display: block;
+  max-width: 100%;
+  max-height: calc(100vh - 100px); 
+  width: auto;
+  height: auto;
+  transform: scale(1.5); 
+  border: 1px solid black;
+  object-fit: contain;
 }
 
 
@@ -33,11 +48,17 @@ nav a{
   margin:  0px 2cm 0px 0px;
 }
 
+
 main{
   display: flex;
+  width: 100%;
+  height: calc(100vh - 60px); 
+  overflow: hidden;
   justify-content: space-between;
   background-color: #111111;
   padding: 10px;
+  
+  
 }
 
 aside.right {
@@ -48,6 +69,7 @@ aside.right {
   background-color: #1e1e1e;
   padding: 10px;
   box-sizing: border-box;
+  
 }
 
 
@@ -58,6 +80,8 @@ main aside{
   color: #FFFFFF;
   padding: 10px;
   background-color: #1e1e1e;
+  
+  
 }
 
 #colorPicker{
@@ -243,20 +267,27 @@ input[type="checkbox"] {
 }
 
 main article{
-  display: block;
-  margin: 10px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin-top: 20px;
+  
 }
 
 aside button {
   margin: 5px;
 }
 
-footer{
+footer {
   background-color: #1e1e1e;
   text-align: center;
   color: #FFFFFF;
+  margin: 0;
+  padding: 10px 0;
+  
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  
 }
-
-
-
-
